--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -16,10 +16,6 @@ output:
 bibliography: library.bib
 ---
 
-General notes on project:
-- max of 15 pages 
-
-
 ```{r setup, include=FALSE}
 options(scipen = 0, digits = 3, tibble.print_max = 50) 
 
@@ -41,114 +37,46 @@ plot_aes = theme_minimal() +
 source(here("source.R"))
 ```
 
-
-
 # Executive Summary {#executive-summary}
 
-Many countries around the world provide nationwide dietary guidelines to the public and require nutrition labels on food products to help people make informed choices about foods and drinks they consume. Every individual, however, has different nutrition needs and preferences according to their age, sex, ethnicity, height, weight, and physical activity level, among many other factors. Therefore, people may benefit from more personalized dietary recommendations. Our goal is to provide the basis for an algorithm that recommends foods a person should consume based on their nutrition needs. To this end, we will compare different approaches to grouping foods based on their nutrient profiles (i.e., spectrum clustering vs. k-means clustering) and demonstrate how others can use our data-driven food groupings to meet their dietary needs. 
+Many countries around the world provide nationwide dietary guidelines to the public and require nutrition labels on food products to help people make informed choices about foods and drinks they consume. Every individual, however, has different nutrition needs and preferences according to their age, sex, ethnicity, height, weight, and physical activity level, among many other factors. Therefore, people may benefit from more personalized dietary recommendations. Our goal is to provide the basis for an algorithm that recommends foods a person should consume based on their nutrition needs. To this end, we compared different approaches to grouping foods based on their nutrient profiles (i.e., spectrum clustering vs. k-means clustering). As expected, spectrum clustering provides better clustering, so we explore the clusters created through spectrum clustering further. Finally, we demonstrate how others can use our data-driven food groupings to meet their dietary needs. 
 
 # Introduction {#introduction} 
+
+## Importance of nutrition in affecting everyday life 
 - make sure to include citations - showing why this research matters (can you send me PDFs of the citations you include so I can include them in the final project doc)
 	- create citations in the same way we did before in diabetes project 
 
 
+## Problem with current food groupings 
+
+Although foods are grouped together in different categories, the means by which these food groupings are created is unclear, so food items in a certain group may not necessarily have the same nutrient profile. A new interpretation of food groupings can change the way diets are currently made - helping people make more “intelligent” diet decisions. More specifically, the results of this study can be used to find the list of foods that have the best combination of nutrients based on a person's dietary needs.
 
 # Study goals
 
-When we started this project we had the general goal of Providing the basis for an algorithm that recommends foods a person should consume based on their nutrition needs. In more concrete terms, we wanted to identify clusters of foods based on their nutrient profile. Although foods are sometimes grouped together, it’s not 100% clear HOW food groups are determined, so food items in a certain group may not necessarily have the same nutrient profile
-A new interpretation of food groupings can change the way diets are currently made - helping people more “intelligent” diet decisions. More specifically, the results of this study could be used to find the list of foods that have the best combination of nutrients based on a person’s dietary needs.
+In the current project, we aim to provide the basis for an algorithm that recommends foods a person should consume based on their nutrition needs. In more concrete terms, we wanted to identify clusters of foods that have the highest intra-group similarity and lowest inter-group similarity based on their nutrient profile. 
 
 # Methods {#methods}
 
-## Data Summary /EDA {#eda} 
+## Exploratory data analysis {#eda} 
 
-Link to slides, code & database: tinyurl.com/4x43u439
+Our dataset originates from the most recent version of the [Canadian Nutrient File](https://www.canada.ca/en/health-canada/services/food-nutrition/healthy-eating/nutrient-data/canadian-nutrient-file-2015-download-files.html) (updated in 2015), provided on the Canadian government site. The database contains average values for nutrients in foods available in Canada, with much of the data coming from the USDA National Nutrient Database for Standard Reference. These averages are based on the generic versions of a food, unless there is a brand specifically included in the database. This is a bilingual dataset with food names, descriptions, and background information that are in both French and English. This version of the database was created to update nutrient values for foods that are the largest contributors of sodium to the diet, since one of the major goals of manufacturers is to reduce sodium content of foods. To this end, the database assesses more than `r nrow(wide_data)` unique foods, ranging from foods such as `r wide_data %>% select(FoodDescription) %>% slice(1)` to `r wide_data %>% select(FoodDescription) %>% slice(174)`, and provides the average nutrient levels per 100 grams. 
 
-Our dataset originates from the most recent version of the [Canadian Nutrient File](https://www.canada.ca/en/health-canada/services/food-nutrition/healthy-eating/nutrient-data/canadian-nutrient-file-2015-download-files.html) (updated in 2015), provided on the Canadian government site. The database contains average values for nutrients in foods available in Canada, with much of the data coming from the (USDA) National Nutrient Database for Standard Reference. These averages are based on the generic versions of a food, unless there is a brand specifically included in the database. This is a bilingual dataset with food names, descriptions, and background information that are in both French and English (and since none of the team members speak French, we went with the English version). This version of the database was created to update nutrient values for foods that are the largest contributors of sodium to the diet, since one of the major goals of manufacturers is to reduce sodium content of foods.
+The original data came as a set of separate datasets that had columns with identifiers (e.g., `FoodID`) to link them, so we then merged the datasets based on the unique identifiers and selected the main variables of interest: the food labels and the nutrient profile associated with a given food label. With this subsetted version of the data, we ran exploratory data analyses.  
 
-To this end, the database assesses more than `r nrow(wide_data)` unique foods, ranging from foods such as `r wide_data %>% select(FoodDescription) %>% slice(1)` to `r wide_data %>% select(FoodDescription) %>% slice(174)`, and provides the average nutrient levels per 100 grams. 
+First, we noticed that some of the nutrients included are subcomponents of other nutrients. For instance, there is a total sugars column that is a sum of several other columns in the data. In other cases, there are columns that are essentially different ways of measuring the same nutrient. So for example, there are two metrics for food energy (i.e., kilocalories and kilojoules), where one kilocalorie is equal to 4.184 kilojoules. We decided to leave these variables as they were, since we expected the methods used in our analyses to be able to essentially ignore these redundancies. 
 
+Also, it is worth noting that there are many values that are missing. For instance, only `r sum(is.na(wide_data %>% select(BIOTIN)))/nrow(wide_data)`% of the rows have values for biotin (see [Missing values in clean dataset section](#missing-vals-clean)). To be able to run our target analyses (which requires a dataset with only nonmissing data), we needed to remove the missing values. We explored two different options for removing missing variables to see whether they would affect the results: mean imputation (i.e., inserted the mean of a column into any rows in that column that are missing) for all variables or first removing variables with more than 50% of missing values and then using mean imputation on the survived variables. We found that the options produced similar results across our different options for mean imputation, so we used the version of the dataset where we used mean imputation for all variables in all subsequent analyses. See [the appendix](#clean-data-summary) for a full summary of the variables in the cleaned dataset after using mean imputation for all variables. 
 
-once we chose the dataset we would use, we had to import it into R: the original data came as a set of separate datasets that had columns with identifiers to link them, so before we could do anything we had to merge them on the unique identifiers and select the main variables of interest: the food labels & the nutrient profile associated with a given food label. 
+## Main analyses {#analyses}
 
-With this subsetted version of the data, we ran some exploratory data analyses to get a sense of what we were working with. 
-
-First, we noticed that some of the nutrients included are subcomponents of other nutrients. So for instance, there is a total sugars column that is a sum of several columns in the data. in other cases, there are columns that are essentially different ways of measuring the same thing. So for example, there are two metrics for food energy (i.e., kilocalories and kilojoules), where one kilocalorie = 4.184 kilojoules. We decided to leave these variables as they were, since we expected the methods used in our analyses to be able to essentially ignore these redundancies. 
- 
-
-Also, it is worth noting that there are many values that are missing. For instance, the nutrient biotin only has non-missing values for 0.982% of the rows in the database. To be able to run our target analyses (which requires a dataset with only nonmissing data), we needed to remove the missing values. We used mean imputation for all variables in all subsequent analyses. Mean imputation essentially means that we inserted the mean of a column into any rows in that column that are missing. 
-
-As mentioned before, there are several variables with multiple NA values. Therefore, to be able to run our target analyses, we needed to remove the NA values. We explored two different options for removing NA variables to see whether they would affect the results: mean imputation for all variables or first removing variables with more than 50% of NAs and then using mean imputation on the survived variables. 
-
-We found that the options produced similar results across our different options for mean imputation, so we used the version of the dataset where we used mean imputation for all variables in all subsequent analyses. 
-
-Notably, some of the nutrients included are subcomponents of other nutrients. Or, like the two metrics for food energy (i.e., kcal and kJ), they are just different ways of measuring the same thing (i.e., one kcal = 4.184 kJ)
-
-Also, it is worth noting that there are many values that are missing. For instance, only `r sum(is.na(wide_data %>% select(BIOTIN)))/nrow(wide_data)`% of the rows have values for biotin (see [Missing values in clean dataset section](#missing-vals-clean))
-
-The original dataset was a relational dataset, with unique identifiers for the main variables of interest. Therefore, we had to merge on the unique identifiers (e.g., `FoodID`) across the relational datasets using the `left_join` function. Then, we 
-
-
-The original dataset was cleaned for analyses in the following ways: 
-
-
-
-(see [here](#clean-data-summary) for a full summary of the variables in the cleaned dataset). All of the subsequent summary statistics and analyses mentioned in the paper will be using the clean dataset. 
-
-
-
-
-notes from here: chrome-extension://oemmndcbldboiebfnladdacbdfmadadm/file:///C:/Users/keana/OneDrive%20-%20PennO365/Comp_transfer2018/Penn/fourth_yr/nutrients_project_stat571/cnf-fcen-csv/CNF%202015%20users_guide%20EN.pdf
-
-
-description of file contents: 
-From FOOD NAME.csv: 
-FoodID (merging var)
-FoodGroupID (merging var)
-FoodDescription
-From NUTRIENT NAME.csv:
-NutrientID (merging var)
-NutrientName
-NutrientUnit (possibly as control??)
-From NUTRIENT AMOUNT.csv:
-NutrientValue
-FoodID (merging var)
-NutrientID (merging var)
-From FOOD GROUP.csv
-FoodGroupID (merging var)
-FoodGroupName
-
-Main file of interest is NUTRIENT AMOUNT.csv -- contains long version of dataset, where there are multiple rows for each food, along with a col for the nutrient identifier and the nutrient value associated with that identifier
-
-Will have to combine the multiple datasets in one to have all info in one place 
-
-"At  present  foods  are  grouped  under  23 different  group  headings  based  on  similar characteristics of the foods"
-
-The foodnamesare only available  in this  version  in  one  lengthwhich does not include abbreviationsand can be up to 255 characters long
-
-- All of the nutrient data is stored per 100g of the food (edible portion) - that is, all nutritional data is on the same scale 
-
-- in cleaning - only selected variables of interest (e.g., we removed mean SE for the nutrient values, since there were many missing values)
-
-
-## Analyses {#analyses}
-
-
-Since our goal is to identify the *best* algorithm for grouping foods that will help a person plan out their meals to best suit their needs, we compared different approaches to grouping the foods based on their nutrient profiles. That is, we compared different methods to make sure foods are as similar as possible in terms of their nutrient profile (that is, we wanted to maximize in-group similarity), while also making sure foods assigned to different groups have very different nutrient profiles (in other words, minimize out-group similarity). 
+Since our goal is to identify the *best* algorithm for grouping foods that will help a person plan out their meals to best suit their needs, we compared different approaches to grouping the foods based on their nutrient profiles. That is, we compared different methods to make sure foods are as similar as possible in terms of their nutrient profile (that is, we wanted to maximize in-group similarity), while also making sure foods assigned to different groups have very different nutrient profiles (in other words, minimize out-group similarity). The slides, code, and database associated with this project is publicly available [here](tinyurl.com/4x43u439). 
 
 The first option we explored to achieve this goal was using k-means clustering on the dataset. K-means clustering is a commonly used unsupervised machine learning algorithm to divide a dataset into pre-specified set of groups (known as clusters in this context). The algorithm assigned foods to clusters based on which assignments will keep the distance between the nutrient profile of each food assigned to a cluster and the mean nutrient profile for a given cluster as low as possible. In other words, it tries to assign foods to clusters that will achieve the highest possible intra-group similarity for the cluster number that we specified. To identify the optimal number of clusters, we used the silhouette method - which essentially compares the quality of clusters produced across a different range of cluster sizes. 
 
 The second approach we explored was using spectrum clustering. Spectrum clustering adds another step right before the k-means clustering approach. Instead of using the raw data to create clusters, spectrum clustering minimizes the number of variables that we cluster on by including a principal components analysis (also known as PCA) right before the clustering analysis. PCA may be especially advantageous when there are a large number of variables you want to cluster on, because it tries to linearly combine the old variables into new ones (aka PC scores) in a way that maximizes the variance. By maximizing variance during PCA, we can reduce the dimensions of the data without losing much information from the original data. Once we had the PC scores, we used the silhouette method like before to identify the optimal number of clusters before running k-means clustering.  
 
-These were the two main approaches that we explored. Since spectrum clustering combines the power of noise reduction through PCA with clustering analyses, we expected beforehand that it would be a better approach for grouping our data. 
-
-Old: 
-Since our goal is to identify the *best* algorithm for grouping foods that will help a person plan out their meals to best suit their needs, we compared different approaches to grouping the foods based on their nutrient profiles. That is, we wanted to maximize within-group similarity, while also minimizing between-group similarity, in nutrient profiles across different food groups. The first option we explored to achieve this goal was by applying k-means clustering to both versions of the dataset using the silhouette method to identify the optimal number of clusters. (briefly EXPLAIN LOGIC BEHIND THIS METHOD). 
-
-  We will run spectrum clustering to see which foods are grouped together based on their nutrient profile. In doing so, we want to find out whether we can find clear-cut clusters of foods based on nutrition profile regardless of actual food group assignment. Our grouping results can be used to find the list of foods that contain the best combination of nutrients based on a persons dietary needs. This improves upon diets that try to rely on the actual food grouping, since our grouping result will be a better representation of the nutrient profile of a set of foods than the food group label, which may be determined arbitrarily.
-  Since we have large dimensions of data (153 nutrient information for `r nrow(wide_data)` unique foods), we are going to run principal component analysis (PCA) to
-
-Then, ran analysis on theoretically-driven set of nutrients (based on [WHO](https://www.medicalnewstoday.com/articles/326132)). 
+These were the two main clustering approaches that we compared. Since spectrum clustering combines the power of noise reduction through PCA with clustering analyses, we expected beforehand that it would be a better approach for grouping our data. 
 
 # Results
 
@@ -169,10 +97,10 @@ Describe:
 
 This plot here shows what the clusters looked like using spectrum clustering across the first two PCs, along with labels for the food in each cluster with the highest absolute PC1 score. The separation between clusters here is more obvious, which is supported by the lower average of the total within-cluster sum of squares across clusters for the spectrum clustering, at 22017
 
-
+### Summary of results
 Thus, our results support our hypothesis that spectrum clustering would provide much better groups of foods, maximizing the similarity of nutrient profiles of foods within any given cluster. 
 
-# Exploring "intelligent" clusters
+## Exploring "intelligent" clusters
 
 We plotted different words clouds of the most commonly used words within each cluster. So for instance, here you can see that the most commonly used word in cluster 2 by far was “raw”, along with “meat” “lean” and “beef”. this cloud tends to have more meats, so it will likely have a higher protein content compared to other clusters. 
 
@@ -184,7 +112,6 @@ We also explored which groups tend to have the highest calorie content - and by 
 - mean kcal per cluster 
 - most important nutrients based on PCA 
 
-
 ## Spectrum clustering on theoretically-driven nutrients 
 Describe:
 - plot of the "clustering over two randomly chosen variables" 
@@ -193,24 +120,59 @@ Describe:
 - most important nutrients based on PCA 
 
 ## Case studies 
-Once we've decided on the best method - Make recommendation for a person who has certain dietary needs. next, we’ll briefly demonstrate how these results can be used to provide “intelligent” recommendations based on a person's dietary needs. 
+
+After determining the best clustering approach based on food nutrient profile, we provide two case studies to serve as examples of how this tool can be used to make recommendations for a person who has specific dietary needs. 
+
+### Case study 1. Following a diet to gain muscle 
+
+Arnold is an aspiring professional bodybuilder that is interested in gaining muscle as quickly as possible. Since he knows the importance of nutrition in affecting the muscle-building process, he plans to change his diet to achieve this goal and has decided to follow the guidance he found at the links [here](https://www.coachmag.co.uk/nutrition/healthy-eating/1263/12-best-nutrients-and-vitamins-building-muscle-and-burning-fat) and [here](https://www.muscleandfitness.com/nutrition/gain-mass/10-nutrition-rules-follow-if-you-want-build-muscle/). Since Arnold is currently 180 pounds and a person that wants to gain muscle is recommended to consume 1.5 grams of protein per pound of bodyweight, his target daily intake of protein is 270 grams per day. It is also recommended that people consume between 2-3 grams of carbohydrates per pound to gain muscle. Therefore, Arnold aims to consume between 360 and 540 grams of total carbohydrates per day. Fat is another important macronutrient that will affect Arnold's muscle-building process. Since the articles he found suggest between 20 and 30 percent of his calories should come from fat, he aims to consume X grams of fat per day. Finally, it is recommended that he consume at least 3600 kilocalories per day to gain muscle. There are also several other nutrients that he would like to consume at above 2 SDs above the mean based on their muscle-building properties including: calcium, biotin, iron, vitamin C, selenium, Omega 3, Vitamin D, vitamin B12, copper, magnesium, riboflavin, and zinc. 
+
+To simulate Arnold, we created a copy of the dataset from our main analyses and compare the macronutrient breakdown of Arnold to the daily nutrient recommendations based on his age and gender, and use that as point of comparison. eg compared to most people, arnold's diet will be relatively high in protein, low in carbs, and average in fat. So use multiplier, this ensures everything is on the same scale.
+
+To determine a point of comparison for Arnold's nutrient intake, we used the [DRI Calculator for Healthcare Professionals from the National Argicultural Library](https://www.nal.usda.gov/fnic/dri-calculator/). This tool calculates daily nutrient recommendations based on the Dietary Reference Intakes (DRIs) established by the Health and Medicine Division of the National Academies of Sciences, Engineering and Medicine, representing the most current scientific knowledge on nutrient needs. We inserted gender (Male), age  (20), height (5 feet 10 inches), weight (180 pounds), and activity level (sedentary) for someone who matches Arnold on all characteristics *but* activity level, since Arnold will be above the mean on activity level compared to the typical person. Therefore, the nutrient recommendations provided by this tool provide a representation of someone who matches Arnold on all characteristics, but does not aspire to be a pro bodybuilder like he does (and hence has a lower activity level). 
 
 
-So to give you an example of how we might use this analysis, I’d like to introduce you to Arnold. He’s an aspiring pro bodybuilder that is interested in gaining muscle. 
+multipliers for arnold compared to average person:
+2734 kcal/day = 1.32
+total carbs: 	308 - 444 grams (average is 376) = 1.2
+protein: 65 g = 4.15
+sat fat = 270 times (because they are told to keep it as low as possible so rec for avg person might be 1g)
+total fat = 10.8 
 
-We’ll walk you through how he might use our food groups to help him achieve his fitness goals. 
+code for ID multipliers for arnold
 
-Since Mark is currently 180 pounds and a person that wants to gain muscle is recommended to consume 1.5g of protein per pound of bodyweight, his target daily intake of protein is 270 grams/day. it is also recommended that people consume between 2-3g/pound to gain muscle so in Mark’s case, it is recommended that he consumes between 360-540 grams/day. Finally, it is recommended that he should consume at least 3600 calories per day to gain muscle. To provide our recommendation, we tried to identify the cluster that most closely matched Mark’s nutrient needs (that is, his goal nutrient profile had the smallest euclidean distance from the food group). Based on our analyses, Mark would best achieve his goals by eating foods in cluster 5. So we recommend Mark target foods like, turkey, brussel sprouts, and pork, all of which are found in cluster 5. 
+```{r}
+# calories
 
+3600/2734
 
+# carbs
 
-Although we chose to focus on two specific examples of the practical uses of this work, there are a number of other contexts that are relevant: sports nutrition, helping athletes perform better by recommending the foods that best satisfy their needs
+450/mean(c(444,308))
+
+# protein
+
+270/65
+
+# sat fat
+
+mean(c(3600*(.05), 3600*(.1)))
+
+# overall fat
+# arnold is recommended to have 900 g of fat/day (avg of 20-30%)
+3600*.25
+
+900/mean(c(61, 106))
+```
+
+To provide our recommendation, we tried to identify the cluster that most closely matched Arnold’s nutrient needs (that is, his goal nutrient profile had the smallest euclidean distance from the food group). Based on our analyses, Arnold would best achieve his goals by eating foods in cluster 5. So we recommend Arnold target foods like, turkey, brussel sprouts, and pork, all of which are found in cluster 5. 
+
+Although we chose to focus on one specific example of the practical uses of this work, there are a number of other contexts that are relevant: sports nutrition, helping athletes perform better by recommending the foods that best satisfy their needs
 it can also be used by the general public for muscle gain and fat loss
 finally it can help patients of chronic illness identify groups of foods that help improve their medical condition
 
 - possibly use this package: https://github.com/easystats/parameters
 - use tab_model or stargazer for showing regressions (see previous write ups for examples)
-
 
 # Conclusion {#conclusion} 
 
@@ -234,7 +196,7 @@ chrome-extension://oemmndcbldboiebfnladdacbdfmadadm/file:///C:/Users/keana/OneDr
 ## Full summary of clean dataset {#clean-data-summary}
 
 ```{r, results = 'asis', cache = T}
-wide_data %>% select(-c(FoodID, FoodGroupID, FoodDescription)) %>% dfSummary(.,  plain.ascii = FALSE, style = 'grid', graph.magnif = 0.75, 
+data_mean_imp %>% select(-c(FoodID, FoodGroupID, FoodDescription)) %>% dfSummary(.,  plain.ascii = FALSE, style = 'grid', graph.magnif = 0.75, 
           valid.col = FALSE, tmp.img.dir = "/tmp")
 
 ```
